<resources>
    <string name="app_name">Workout</string>
    <string name="promptWorkout">Choose a workout</string>
    <string name="prompt">Choose a week series</string>
    <string name="done">Done!</string>
    <string name="go">Do exercise\nand press "Done"</string>
    <string name="congratulations">Congratulations!</string>
    <string name="up">+</string>
    <string name="down">-</string>
    <string name="lastWorkout">lastWorkout</string>
    <string name="ext">.history</string>
    <string name="settings">settings.json</string>
    <string-array name="workouts">
        <item>PullUp</item>
        <item>PushUp</item>
    </string-array>
    <string-array name="PullUp">
        <item>3 2 2 1 1</item>
        <item>4 3 2 1 1</item>
        <item>4 3 3 2 1</item>
        <item>5 4 3 2 2</item>
        <item>5 4 4 3 2</item>
        <item>6 5 4 3 3</item>
        <item>6 5 5 4 3</item>
        <item>7 6 5 4 4</item>
        <item>8 6 5 5 4</item>
        <item>8 7 5 5 5</item>
        <item>9 7 6 5 5</item>
        <item>10 7 6 6 5</item>
        <item>10 8 6 6 6</item>
        <item>11 8 7 6 6</item>
        <item>12 8 7 7 6</item>
        <item>12 9 7 7 7</item>
        <item>13 9 8 7 7</item>
        <item>14 9 8 8 7</item>
        <item>14 10 8 8 8</item>
        <item>15 10 9 8 8</item>
        <item>16 10 9 9 8</item>
        <item>16 11 9 9 9</item>
        <item>17 11 10 9 9</item>
        <item>18 11 10 10 9</item>
        <item>18 12 10 10 10</item>
        <item>19 12 11 10 10</item>
        <item>20 12 11 11 10</item>
        <item>20 13 11 11 11</item>
        <item>21 13 12 11 11</item>
        <item>22 13 12 12 11</item>
        <item>22 14 12 12 12</item>
        <item>23 14 13 13 12</item>
        <item>24 14 13 13 12</item>
        <item>24 15 13 13 13</item>
        <item>25 15 14 13 13</item>
        <item>26 15 14 14 13</item>
    </string-array>
    <string-array name="PushUp">
        <item>3 2 2 1 1</item>
        <item>4 3 2 1 1</item>
        <item>4 3 3 2 1</item>
        <item>5 4 3 2 2</item>
        <item>5 4 4 3 2</item>
        <item>6 5 4 3 3</item>
        <item>6 5 5 4 3</item>
        <item>7 6 5 4 4</item>
        <item>8 6 5 5 4</item>
        <item>8 7 5 5 5</item>
        <item>9 7 6 5 5</item>
        <item>10 7 6 6 5</item>
        <item>10 8 6 6 6</item>
        <item>11 8 7 6 6</item>
        <item>12 8 7 7 6</item>
        <item>12 9 7 7 7</item>
        <item>13 9 8 7 7</item>
        <item>14 9 8 8 7</item>
        <item>14 10 8 8 8</item>
        <item>15 10 9 8 8</item>
        <item>16 10 9 9 8</item>
        <item>16 11 9 9 9</item>
        <item>17 11 10 9 9</item>
        <item>18 11 10 10 9</item>
        <item>18 12 10 10 10</item>
        <item>19 12 11 10 10</item>
        <item>20 12 11 11 10</item>
        <item>20 13 11 11 11</item>
        <item>21 13 12 11 11</item>
        <item>22 13 12 12 11</item>
        <item>22 14 12 12 12</item>
        <item>23 14 13 13 12</item>
        <item>24 14 13 13 12</item>
        <item>24 15 13 13 13</item>
        <item>25 15 14 13 13</item>
        <item>26 15 14 14 13</item>
    </string-array>
</resources>
