<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/workoutSpinner"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:prompt="@string/promptWorkout"
        android:entries="@array/workouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/weekSpinner"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:prompt="@string/prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutSpinner" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:visibility="invisible"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/workoutSpinner" />

    <TextView
        android:id="@+id/goText"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:text="@string/go"
        android:textAlignment="center"
        android:visibility="invisible"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/workoutSpinner" />

    <TextView
        android:id="@+id/congrat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:visibility="invisible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/currentAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />

    <TextView
        android:id="@+id/currentAmount"
        android:keepScreenOn="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:visibility="invisible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />

    <Button
        android:id="@+id/buttonUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/up"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/currentAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentAmount"
        app:layout_constraintTop_toTopOf="@+id/currentAmount" />

    <Button
        android:id="@+id/buttonDown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="monospace"
        android:text="@string/down"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/currentAmount"
        app:layout_constraintEnd_toStartOf="@+id/currentAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/currentAmount" />

    <Button
        android:id="@+id/done"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="#4CAF50"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/seriesDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/seriesDone"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/firstDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#F44336"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/secondDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#F44336"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/thirdDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#F44336"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/fourthDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#F44336"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/fifthDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#F44336"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/series"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/fourth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/fifth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>